@@ -30,5 +30,6 @@ commands = nosetests fs.tests -v \
 deps = distribute
 	six	
 	dexml
-	nose	
+	nose
+	winpdb
 	
